--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@deepgram/sdk": "^3.9.0",
     "@openai/realtime-api-beta": "github:openai/openai-realtime-api-beta",
+    "cross-fetch": "^4.0.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "openai": "^4.67.3"
